--- a/content/publication/effects-of-pump-versus-twice-daily-injection-delivery-of-synthetic-parathyroid-hormone-1-34-in-children-with-severe-congenital-hypoparathyroidism/cite.bib
+++ b/content/publication/effects-of-pump-versus-twice-daily-injection-delivery-of-synthetic-parathyroid-hormone-1-34-in-children-with-severe-congenital-hypoparathyroidism/cite.bib
@@ -1,13 +1,12 @@
-@article{10.1214/14-AOAS791,
-author = {Kara A. Fulton and Danping Liu and Denise L. Haynie and Paul S. Albert},
-title = {{Mixed model and estimating equation approaches for zero inflation in clustered binary response data with application to a dating violence study}},
-volume = {9},
-journal = {The Annals of Applied Statistics},
-number = {1},
-publisher = {Institute of Mathematical Statistics},
-pages = {275 -- 299},
-keywords = {adolescent dating violence, clustered binary data, generalized estimating equations, maximum likelihood, Zero inflation},
-year = {2015},
-doi = {10.1214/14-AOAS791},
-URL = {https://doi.org/10.1214/14-AOAS791}
+@article{WINER2014556,
+title = {Effects of Pump versus Twice-Daily Injection Delivery of Synthetic Parathyroid Hormone 1-34 in Children with Severe Congenital Hypoparathyroidism},
+journal = {The Journal of Pediatrics},
+volume = {165},
+number = {3},
+pages = {556-563.e1},
+year = {2014},
+issn = {0022-3476},
+doi = {https://doi.org/10.1016/j.jpeds.2014.04.060},
+url = {https://www.sciencedirect.com/science/article/pii/S0022347614004181},
+author = {Karen K. Winer and Kara A. Fulton and Paul S. Albert and Gordon B. Cutler},
 }
