--- a/content/publication/permeabilization-free-en-bloc-immunohistochemistry-for-correlative-microscopy/cite.bib
+++ b/content/publication/permeabilization-free-en-bloc-immunohistochemistry-for-correlative-microscopy/cite.bib
@@ -1,11 +1,9 @@
 @article {Fulton2020.10.07.327734,
 	author = {Fulton, Kara A and Briggman, Kevin L},
 	title = {Permeabilization-free en bloc immunohistochemistry for correlative microscopy},
-	elocation-id = {2020.10.07.327734},
-	year = {2020},
-	doi = {10.1101/2020.10.07.327734},
-	publisher = {Cold Spring Harbor Laboratory},
-	URL = {https://www.biorxiv.org/content/early/2020/10/08/2020.10.07.327734},
-	eprint = {https://www.biorxiv.org/content/early/2020/10/08/2020.10.07.327734.full.pdf},
-	journal = {bioRxiv}
+	year = {2021},
+  journal = {eLife},
+	doi = {10.7554/eLife.63392},
+	publisher = {eLife Sciences Publications},
+	URL = {https://elifesciences.org/articles/63392}
 }
